syntax = "proto2";

package steve.proto.base;

message Header {
    optional uint32 msg_id = 1;         // 消息ID
    optional uint64 send_seq = 2;       // 发送序号
    optional uint64 recv_seq = 3;       // 最后一次收到的消息序号
    optional uint64 stamp_time = 4;     // 最后一次收到消息的时间戳
    optional uint32 body_length = 5;    // 消息体长度
    optional uint64 rsp_seq = 6;        // 回复序号
}