syntax = "proto3";

package steve.proto.gaterpc;

// 需要使用 Any 
import "google/protobuf/any.proto";


message Header {
    uint32 msg_id = 1;
}

// 客户端消息
message ClientMessage {
    // 客户端 ID
    uint64 client_id = 1;
    // 消息头
    Header header = 2;
    // 消息内容
    bytes request_data = 3;
}

// 处理结果
message HandleResult {
    // 回复数据， 长度为空时则不需要回复
    repeated google.protobuf.Any response_datas = 1; 
}

// 消息处理器
service MessageHandler {
    rpc HandleClientMessage(ClientMessage) returns (HandleResult) {}
}


